[gd_scene load_steps=7 format=3 uid="uid://cqogtolk2gp3p"]

[ext_resource type="Texture2D" uid="uid://53tttm83xl6s" path="res://assets/custom assets/emptyl_star.png" id="1_0ieii"]
[ext_resource type="Script" path="res://scene/ui.gd" id="1_5ok8w"]
[ext_resource type="FontFile" uid="uid://durqhw2g3uvsu" path="res://assets/custom assets/joystix.monospace-regular.otf" id="2_lggkb"]
[ext_resource type="Texture2D" uid="uid://b313ihnyvh58n" path="res://assets/custom assets/half_heard.png" id="3_qpq7p"]
[ext_resource type="Texture2D" uid="uid://chwl2iw56yma0" path="res://assets/custom assets/Coin2d.png" id="3_y50b1"]

[sub_resource type="Theme" id="Theme_ns38g"]
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("2_lggkb")

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5ok8w")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Star" type="Control" parent="MarginContainer"]
show_behind_parent = true
layout_mode = 2

[node name="Star_Container" type="HBoxContainer" parent="MarginContainer/Star"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -81.0
offset_right = 129.0
offset_bottom = -41.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Star/Star_Container"]
layout_mode = 2
texture = ExtResource("1_0ieii")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Star/Star_Container"]
layout_mode = 2
texture = ExtResource("1_0ieii")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/Star/Star_Container"]
layout_mode = 2
texture = ExtResource("1_0ieii")
expand_mode = 2

[node name="Health" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Health_Container" type="HBoxContainer" parent="MarginContainer/Health"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.2, 1.2)
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2
flip_h = true

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2
flip_h = true

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/Health/Health_Container"]
layout_mode = 2
texture = ExtResource("3_qpq7p")
expand_mode = 2
flip_h = true

[node name="Coin" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Coin"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_right = -29.0
offset_bottom = 42.0
grow_horizontal = 0
scale = Vector2(1.2, 1.2)
theme_override_constants/separation = 20

[node name="Coin_label" type="Label" parent="MarginContainer/Coin/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ns38g")
text = "0/0
"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Coin/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_y50b1")
expand_mode = 2
